--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: jrlagrone/github-profile-3d-contrib@v0.8.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: 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
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
